Changes in PixelLight 1.0.1-R1 (not released, yet)
- Bugfix: Due to a violation of the official GLSL specification, "PLCompositing::SRPEndFXAA" failed on some shader compilers while it worked on others


Changes in PixelLight 1.0.0-R1 (released on August 23, 2012)
- Feature: The loadable system can now also deal with file formats which don't have any file extension
- Feature: The loadable system can now also deal with file formats like DICOM which load from directories instead of files
- Feature: Added support for tessellation control shader (named "hull shader" in DirectX 11) within "PLRenderer"
- Feature: Added support for tessellation evaluation shader (named "domain shader" in DirectX 11) within "PLRenderer"
- Feature: Added support for geometric primitive instancing within "PLRenderer"
- Feature: Added "55RendererTessellation"-sample
- Feature: Added "56RendererInstancing"-sample
- Feature: Added shaders based scene renderer pass "PLCompositing::SRPDebugDepthShaders" visualizing the depth buffer for debugging purposes
- Feature: Added shaders based scene renderer pass "PLCompositing::SRPMotionBlurShaders" for image based motion blur
- Feature: Autodesk 3ds Max 2013 scene exporter added
- Feature: Added plugins for volume rendering
- Change: Moved out-of-date "PLScene::SNSky" and "PLScene::SNTerrain" into the new plugin project "PLNature" ("PLNature::SNSky", "PLNature::SNTerrain")
- Change: Moved "PLPhysics::SNMPhysicsBodyTerrain" into "PLNature::SNMPhysicsBodyTerrain"
- Change: Updated from "Cg Toolkit 3.1 - February 2012" to "Cg Toolkit 3.1 - April 2012"
- Change: Updated from "SQLite 3.5.6" to "SQLite 3.7.13"
- Bugfix (ID: 3502066): "PLGraphics::Color4::IsValid()" alpha-check was invalid
- Bugfix (ID: 3512436): "pl_implement_class(Keyboard)" was missing within "PLInput"
- Bugfix (ID: 3514155): The ingame console was processing input events received while the main window had no focus