@@ -137,8 +137,9 @@ void PrintDescription(uint32 nIndent, const String &sText)
 			// Print word
 			System::GetInstance()->GetConsole().Print(sWord);
 		}
-	// Break line for next Option
-	System::GetInstance()->GetConsole().Print('\n');
+
+		// Break line for next option to be consistent to the other if-branch
+		System::GetInstance()->GetConsole().Print('\n');
 	}
 }
 
