@@ -1,5 +1,7 @@
 Changes in PixelLight 1.0.1-R1 (not released, yet)
 - Bugfix: Due to a violation of the official GLSL specification, "PLCompositing::SRPEndFXAA" failed on some shader compilers while it worked on others
+- Bugfix: "PLRendererOpenGL" & "PLRendererOpenGLES2": Fixed a memory leak inside "FontGlyphTexture" ("FT_Done_Glyph()" was missing)
+- Bugfix: "PLRendererOpenGL" & "PLRendererOpenGLES2": Fixed a memory leak inside "FontManager" ("FT_Done_FreeType()" was missing)
 
 
 Changes in PixelLight 1.0.0-R1 (released on August 23, 2012)
